@@ -915,6 +915,12 @@ extern void *slurm_ctl_conf_2_key_pairs (slurm_ctl_conf_t* slurm_ctl_conf_ptr)
 		slurm_ctl_conf_ptr->job_credential_public_certificate);
 	list_append(ret_list, key_pair);
 
+	key_pair = xmalloc(sizeof(config_key_pair_t));
+	key_pair->name = xstrdup("JobDefaults");
+	key_pair->value =
+		job_defaults_str(slurm_ctl_conf_ptr->job_defaults_list);
+	list_append(ret_list, key_pair);
+
 	snprintf(tmp_str, sizeof(tmp_str), "%u",
 		 slurm_ctl_conf_ptr->job_file_append);
 	key_pair = xmalloc(sizeof(config_key_pair_t));
