@@ -691,6 +691,9 @@ static int _build_single_partitionline_info(slurm_conf_partition_t *part)
 	part_ptr->max_time       = part->max_time;
 	part_ptr->def_mem_per_cpu = part->def_mem_per_cpu;
 	part_ptr->default_time   = part->default_time;
+	FREE_NULL_LIST(part_ptr->job_defaults_list);
+	part_ptr->job_defaults_list =
+		job_defaults_copy(part->job_defaults_list);
 	part_ptr->max_cpus_per_node = part->max_cpus_per_node;
 	part_ptr->max_share      = part->max_share;
 	part_ptr->max_mem_per_cpu = part->max_mem_per_cpu;
@@ -2253,6 +2256,8 @@ static int  _restore_part_state(List old_part_list, char *old_def_part_name,
 				       &part_ptr->deny_qos_bitstr);
 			part_ptr->flags = old_part_ptr->flags;
 			part_ptr->grace_time = old_part_ptr->grace_time;
+			part_ptr->job_defaults_list =
+				job_defaults_copy(old_part_ptr->job_defaults_list);
 			part_ptr->max_cpus_per_node =
 				old_part_ptr->max_cpus_per_node;
 			part_ptr->max_mem_per_cpu =
